# TwoSided-Fair-Rec-Survey

./: .gitignore  README.md  evaluation.py  experiments.py  plot_eval.py  pyproject.toml  queries.txt  utils.py
ltr/: fair_reciprocal.py  gini_functions.py  joint_multisided.py  two_sided_lorenz.py
opt/: ITFR.py  fairrec_patro.py
results/: new_table_results.csv  plot_eval.py  scores_amazon_1000_run2.parquet  scores_amazon_350_run1.parquet  scores_amazon_400.parquet  scores_amazon_500_run4.parquet  scores_black_friday_350_run1.parquet  scores_black_friday_400.parquet  scores_black_friday_700_run2.parquet  scores_movielens_300_run1.parquet  scores_movielens_350.parquet  scores_movielens_700_run2.parquet  scores_yelp_300_run0.parquet  scores_yelp_500_run3.parquet  table_results.csv
results/CPFair/: amazon_fair_scores_1000_interactions.parquet  amazon_fair_scores_1000_interactions_3.parquet  amazon_fair_scores_1500_interactions_3.parquet  amazon_fair_scores_300_interactions.parquet  amazon_fair_scores_350_interactions.parquet  amazon_fair_scores_350_interactions_1.parquet  amazon_fair_scores_500_interactions_3.parquet  amazon_fair_scores_700_interactions_1.parquet  amazon_top_k_1000_interactions_0.parquet  amazon_top_k_1500_interactions.parquet  amazon_top_k_1500_interactions_4.parquet  amazon_top_k_300_interactions_4.parquet  amazon_top_k_350_interactions_0.parquet  amazon_top_k_500_interactions_3.parquet  amazon_top_k_700_interactions.parquet  amazon_top_k_700_interactions_1.parquet  black_friday_top_k_300_interactions_2.parquet  (+49 more)
rr/: greedy_cpfair.py  pct.py  tfrom.py
(+812 files in other folders)
